	- Improve ChanServ access add help.
2007-05-14 - 1.0.11
	Bugfix point release. Bug(s) fixed:
	- Fix parting FloodServ from a channel he's not joined to
	- Fix various (some severe) memory leaks
	- Fix bug causing some channel modes to go unnoticed.
2007-05-14 - 1.0.12
	Bugfix point release.  Bug(s) fixed:
	- Fix core caused by tring to print channel name from a null struct.
	- Fix chanserv access notices to be more helpful.
2007-05-18 - 1.0.13
	Bugfix point release.  Bug(s) fixed:
	- Fix a 64 bit compilation issue.
	- Fix various additional memory leaks.
	- Reenable closing of module handles which sneaked in during debugging.
2007-06-26 - 1.0.14
	Bugfix point release.  Bug(s) fixed:
	- Fix another bug in channel modes causing a desync. (#28)
	- Only show topic, entry message, and mlock to opers or members. (#38 maybe #31)
	- set #channel floodserv should show on/off properly. (#29)
	- floodserv shouldn't insert an AKILL twice. (#37)
	- Remove stray tab from chanserv access add help.
	- the part cb may send a null channel don't let FS crash. (#43)
	- opers should be allowed to see operserv help. (#41)
	- db_find_chan and db_find_chanaccess shouldn't leak when the channel isn't
		found or access level. (#26)
	- Fix another bug in channel modes causing a desync. (#28)
	- Don't allow operserv to be reloaded, it won't work. (#45)
2007-06-28 - 1.0.15
	Bugfix point release. Bug(s) fixed:
	- We should BlockHeapFree clients when they've exited. (#26)
	- STATS z implementation. (#17)
2007-06-28 - 1.0.16
	Bugfix point release. Bug(s) fixed:
	- Now that we properly free clients we should delete their IDs (Fixes
		crash).
2007-??-?? - 1.0.17
	Bugfix point release. Bug(s) fixed:
	- db_log shouldn't act like ilog, remove L_CRIT (Fixes crash on db going
	away).
	- add db_reopen_log() which i was sure already existed, but apparently
		didnt. (#52)
	- Allow NULL hostname to be specified for database{} connection to use the
		system default to the database driver. (#21)